// Copyright Materialize, Inc. and contributors. All rights reserved.
//
// Use of this software is governed by the Business Source License
// included in the LICENSE file.
//
// As of the Change Date specified in that file, in accordance with
// the Business Source License, use of this software will be governed
// by the Apache License, Version 2.0.

syntax = "proto3";

package mz_persist_client.internal.service;

message ProtoPushDiff {
    string shard_id = 1;
    uint64 seqno = 2;
    bytes diff = 3;
}

service ProtoPersist {
    // WIP: A real impl would have dedicated Req and Res messages, each a oneof:
    // - ProtoPushReq with ProtoPushDiff and something to filter which shards
    //   are subscribed to. Later, potentially we'd add a ProtoPushPart.
    // - ProtoPushRes with ProtoPushDiff and similarly a ProtoPushPart later.
    rpc Push (stream ProtoPushDiff) returns (stream ProtoPushDiff);
}
